# fawn-flow

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test_logging.py
docs/: architecture.md  configuration.md  flow.md  prompts.md  technologies.md
examples/: How tall is Eiffel Tower compared to tallest building.md
src/: config.py  workflow.py
src/agents/: agents.py
src/graph/: builder.py  nodes.py  types.py
src/prompts/: coder.md  planner.md  reporter.md  researcher.md
src/tools/: python_repl.py  search.py
